// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthRestakeVault create eigen pod succeeds 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 651839,
}
`;

exports[`EthRestakeVault multiple validators succeeds 1`] = `
Object {
  "calldataByteLength": 2820,
  "gasUsed": 556076,
}
`;

exports[`EthRestakeVault restake operators manager succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 52652,
}
`;

exports[`EthRestakeVault restake withdrawals manager succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 51882,
}
`;

exports[`EthRestakeVault single validator succeeds 1`] = `
Object {
  "calldataByteLength": 1060,
  "gasUsed": 268380,
}
`;
